CCBD-5648 : Dependencies scan vulnerability remediation : keycloak (#54)