@@ -17,28 +17,36 @@
 
 package org.keycloak.sdjwt;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.node.ArrayNode;
-import com.fasterxml.jackson.databind.node.ObjectNode;
-import org.keycloak.common.VerificationException;
-import org.keycloak.crypto.AsymmetricSignatureVerifierContext;
-import org.keycloak.crypto.ECDSASignatureVerifierContext;
-import org.keycloak.crypto.KeyType;
-import org.keycloak.crypto.KeyWrapper;
-import org.keycloak.crypto.SignatureVerifierContext;
-import org.keycloak.jose.jwk.JWK;
-import org.keycloak.sdjwt.vp.KeyBindingJWT;
-import org.keycloak.sdjwt.vp.KeyBindingJwtVerificationOpts;
-import org.keycloak.util.JWKSUtils;
-
-import java.time.Instant;
+import java.util.AbstractMap;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
+
+import org.keycloak.OID4VCConstants;
+import org.keycloak.common.VerificationException;
+import org.keycloak.crypto.SignatureVerifierContext;
+import org.keycloak.sdjwt.consumer.PresentationRequirements;
+import org.keycloak.sdjwt.vp.KeyBindingJWT;
+import org.keycloak.sdjwt.vp.KeyBindingJwtVerificationOpts;
+
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+import org.jboss.logging.Logger;
+
+import static org.keycloak.OID4VCConstants.CLAIM_NAME_JWK;
+import static org.keycloak.OID4VCConstants.CLAIM_NAME_SD;
+import static org.keycloak.OID4VCConstants.CLAIM_NAME_SD_HASH_ALGORITHM;
+import static org.keycloak.OID4VCConstants.CLAIM_NAME_SD_UNDISCLOSED_ARRAY;
+import static org.keycloak.OID4VCConstants.SDJWT_DELIMITER;
+import static org.keycloak.OID4VCConstants.SD_HASH;
+
 
 /**
  * Runs SD-JWT verification in isolation with only essential properties.
@@ -46,17 +54,21 @@ import java.util.stream.Collectors;
  * @author <a href="mailto:Ingrid.Kamga@adorsys.com">Ingrid Kamga</a>
  */
 public class SdJwtVerificationContext {
+
+    private static final Logger logger = Logger.getLogger(SdJwtVerificationContext.class.getName());
+
     private String sdJwtVpString;
 
     private final IssuerSignedJWT issuerSignedJwt;
+
     private final Map<String, String> disclosures;
+
     private KeyBindingJWT keyBindingJwt;
 
-    public SdJwtVerificationContext(
-            String sdJwtVpString,
-            IssuerSignedJWT issuerSignedJwt,
-            Map<String, String> disclosures,
-            KeyBindingJWT keyBindingJwt) {
+    public SdJwtVerificationContext(String sdJwtVpString,
+                                    IssuerSignedJWT issuerSignedJwt,
+                                    Map<String, String> disclosures,
+                                    KeyBindingJWT keyBindingJwt) {
         this(issuerSignedJwt, disclosures);
         this.keyBindingJwt = keyBindingJwt;
         this.sdJwtVpString = sdJwtVpString;
@@ -75,41 +87,50 @@ public class SdJwtVerificationContext {
     private Map<String, String> computeDigestDisclosureMap(List<String> disclosureStrings) {
         return disclosureStrings.stream()
                 .map(disclosureString -> {
-                    var digest = SdJwtUtils.hashAndBase64EncodeNoPad(
+                    String digest = SdJwtUtils.hashAndBase64EncodeNoPad(
                             disclosureString.getBytes(), issuerSignedJwt.getSdHashAlg());
-                    return Map.entry(digest, disclosureString);
+                    return new AbstractMap.SimpleEntry<>(digest, disclosureString);
                 })
                 .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
     }
 
     /**
-     * Verifies SD-JWT as to whether the Issuer-signed JWT's signature and disclosures are valid.
+     * Verifies SD-JWT whether the Issuer-signed JWT's signature and disclosures are valid.
      *
      * <p>Upon receiving an SD-JWT, a Holder or a Verifier needs to ensure that:</p>
      * - the Issuer-signed JWT is valid, i.e., it is signed by the Issuer and the signature is valid, and
      * - all Disclosures are valid and correspond to a respective digest value in the Issuer-signed JWT
      * (directly in the payload or recursively included in the contents of other Disclosures).
      *
-     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification. A verifier
-     *                                        must be specified for validating the Issuer-signed JWT. The caller
-     *                                        is responsible for establishing trust in that associated public keys
-     *                                        belong to the intended issuer.
+     * @param issuerVerifyingKeys             Verifying keys for validating the Issuer-signed JWT. The caller
+     *                                        is responsible for establishing trust in that the keys belong
+     *                                        to the intended issuer.
+     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification.
+     * @param presentationRequirements        If set, the presentation requirements will be enforced upon fully
+     *                                        disclosing the Issuer-signed JWT during the verification.
      * @throws VerificationException if verification failed
      */
-    public void verifyIssuance(
-            IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts
-    ) throws VerificationException {
+    public void verifyIssuance(List<SignatureVerifierContext> issuerVerifyingKeys,
+                               IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts,
+                               PresentationRequirements presentationRequirements)
+            throws VerificationException
+    {
         // Validate the Issuer-signed JWT.
-        validateIssuerSignedJwt(issuerSignedJwtVerificationOpts.getVerifier());
+        validateIssuerSignedJwt(issuerVerifyingKeys);
 
         // Validate disclosures.
-        var disclosedPayload = validateDisclosuresDigests();
+        JsonNode disclosedPayload = validateDisclosuresDigests();
 
-        // Validate time claims.
+        // Validate time claims and algorithm header claim.
         // Issuers will typically include claims controlling the validity of the SD-JWT in plaintext in the
         // SD-JWT payload, but there is no guarantee they would do so. Therefore, Verifiers cannot reliably
         // depend on that and need to operate as though security-critical claims might be selectively disclosable.
-        validateIssuerSignedJwtTimeClaims(disclosedPayload, issuerSignedJwtVerificationOpts);
+        issuerSignedJwtVerificationOpts.verify(issuerSignedJwt);
+
+        // Enforce presentation requirements.
+        if (presentationRequirements != null) {
+            presentationRequirements.checkIfSatisfiedBy(disclosedPayload);
+        }
     }
 
     /**
@@ -120,19 +141,23 @@ public class SdJwtVerificationContext {
      * to ensure that if Key Binding is required, the Key Binding JWT is signed by the Holder and valid.
      * </p>
      *
-     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification. A verifier
-     *                                        must be specified for validating the Issuer-signed JWT. The caller
-     *                                        is responsible for establishing trust in that associated public keys
-     *                                        belong to the intended issuer.
+     * @param issuerVerifyingKeys             Verifying keys for validating the Issuer-signed JWT. The caller
+     *                                        is responsible for establishing trust in that the keys belong
+     *                                        to the intended issuer.
+     * @param issuerSignedJwtVerificationOpts Options to parameterize the Issuer-Signed JWT verification.
      * @param keyBindingJwtVerificationOpts   Options to parameterize the Key Binding JWT verification.
      *                                        Must, among others, specify the Verifier's policy whether
      *                                        to check Key Binding.
+     * @param presentationRequirements        If set, the presentation requirements will be enforced upon fully
+     *                                        disclosing the Issuer-signed JWT during the verification.
      * @throws VerificationException if verification failed
      */
-    public void verifyPresentation(
-            IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts,
-            KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts
-    ) throws VerificationException {
+    public void verifyPresentation(List<SignatureVerifierContext> issuerVerifyingKeys,
+                                   IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts,
+                                   KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts,
+                                   PresentationRequirements presentationRequirements)
+            throws VerificationException
+    {
         // If Key Binding is required and a Key Binding JWT is not provided,
         // the Verifier MUST reject the Presentation.
         if (keyBindingJwtVerificationOpts.isKeyBindingRequired() && keyBindingJwt == null) {
@@ -140,7 +165,7 @@ public class SdJwtVerificationContext {
         }
 
         // Upon receiving a Presentation, in addition to the checks in {@link #verifyIssuance}...
-        verifyIssuance(issuerSignedJwtVerificationOpts);
+        verifyIssuance(issuerVerifyingKeys, issuerSignedJwtVerificationOpts, presentationRequirements);
 
         // Validate Key Binding JWT if required
         if (keyBindingJwtVerificationOpts.isKeyBindingRequired()) {
@@ -156,18 +181,32 @@ public class SdJwtVerificationContext {
      * - the Issuer-signed JWT is valid, i.e., it is signed by the Issuer and the signature is valid
      * </p>
      *
+     * @param verifiers Verifying keys for validating the Issuer-signed JWT.
      * @throws VerificationException if verification failed
      */
-    private void validateIssuerSignedJwt(SignatureVerifierContext verifier) throws VerificationException {
+    private void validateIssuerSignedJwt(
+            List<SignatureVerifierContext> verifiers
+    ) throws VerificationException {
         // Check that the _sd_alg claim value is understood and the hash algorithm is deemed secure
         issuerSignedJwt.verifySdHashAlgorithm();
 
         // Validate the signature over the Issuer-signed JWT
-        try {
-            issuerSignedJwt.verifySignature(verifier);
-        } catch (VerificationException e) {
-            throw new VerificationException("Invalid Issuer-Signed JWT", e);
+        Iterator<SignatureVerifierContext> iterator = verifiers.iterator();
+        while (iterator.hasNext()) {
+            try {
+                SignatureVerifierContext verifier = iterator.next();
+                issuerSignedJwt.verifySignature(verifier);
+                return;
+            } catch (VerificationException e) {
+                logger.debugf(e, "Issuer-signed JWT's signature verification failed against one potential verifying key");
+                if (iterator.hasNext()) {
+                    logger.debugf("Retrying Issuer-signed JWT's signature verification with next potential verifying key");
+                }
+            }
         }
+
+        // No potential verifier could verify the JWT's signature
+        throw new VerificationException("Invalid Issuer-Signed JWT: Signature could not be verified");
     }
 
     /**
@@ -175,20 +214,20 @@ public class SdJwtVerificationContext {
      *
      * @throws VerificationException if verification failed
      */
-    private void validateKeyBindingJwt(
-            KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts
-    ) throws VerificationException {
+    private void validateKeyBindingJwt(KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts)
+            throws VerificationException
+    {
         // Check that the typ of the Key Binding JWT is kb+jwt
         validateKeyBindingJwtTyp();
 
         // Determine the public key for the Holder from the SD-JWT
-        var cnf = issuerSignedJwt.getCnfClaim().orElseThrow(
+        JsonNode cnf = issuerSignedJwt.getCnfClaim().orElseThrow(
                 () -> new VerificationException("No cnf claim in Issuer-signed JWT for key binding")
         );
 
         // Ensure that a signing algorithm was used that was deemed secure for the application.
         // The none algorithm MUST NOT be accepted.
-        var holderVerifier = buildHolderVerifier(cnf);
+        SignatureVerifierContext holderVerifier = buildHolderVerifier(cnf);
 
         // Validate the signature over the Key Binding JWT
         try {
@@ -197,12 +236,8 @@ public class SdJwtVerificationContext {
             throw new VerificationException("Key binding JWT invalid", e);
         }
 
-        // Check that the creation time of the Key Binding JWT is within an acceptable window.
-        validateKeyBindingJwtTimeClaims(keyBindingJwtVerificationOpts);
-
-        // Determine that the Key Binding JWT is bound to the current transaction and was created
-        // for this Verifier (replay protection) by validating nonce and aud claims.
-        preventKeyBindingJwtReplay(keyBindingJwtVerificationOpts);
+        // Check timestamps of the keybinding-jwt and the header algorithm
+        keyBindingJwtVerificationOpts.verify(keyBindingJwt);
 
         // The same hash algorithm as for the Disclosures MUST be used (defined by the _sd_alg element
         // in the Issuer-signed JWT or the default value, as defined in Section 5.1.1).
@@ -219,9 +254,9 @@ public class SdJwtVerificationContext {
      * @throws VerificationException if verification failed
      */
     private void validateKeyBindingJwtTyp() throws VerificationException {
-        var typ = keyBindingJwt.getHeader().getType();
-        if (!typ.equals(KeyBindingJWT.TYP)) {
-            throw new VerificationException("Key Binding JWT is not of declared typ " + KeyBindingJWT.TYP);
+        String typ = keyBindingJwt.getJwsHeader().getType();
+        if (!OID4VCConstants.KEYBINDING_JWT_TYP.equals(typ)) {
+            throw new VerificationException("Key Binding JWT is not of declared typ " + OID4VCConstants.KEYBINDING_JWT_TYP);
         }
     }
 
@@ -234,141 +269,16 @@ public class SdJwtVerificationContext {
         Objects.requireNonNull(cnf);
 
         // Read JWK
-        var cnfJwk = cnf.get("jwk");
+        JsonNode cnfJwk = cnf.get(CLAIM_NAME_JWK);
         if (cnfJwk == null) {
             throw new UnsupportedOperationException("Only cnf/jwk claim supported");
         }
 
-        // Parse JWK
-        KeyWrapper keyWrapper;
+        // Convert JWK
         try {
-            JWK jwk = SdJwtUtils.mapper.convertValue(cnfJwk, JWK.class);
-            keyWrapper = JWKSUtils.getKeyWrapper(jwk);
-            Objects.requireNonNull(keyWrapper);
+            return JwkParsingUtils.convertJwkNodeToVerifierContext(cnfJwk);
         } catch (Exception e) {
-            throw new VerificationException("Malformed or unsupported cnf/jwk claim");
-        }
-
-        // Build verifier
-
-        // KeyType.EC
-        if (keyWrapper.getType().equals(KeyType.EC)) {
-            if (keyWrapper.getAlgorithm() == null) {
-                Objects.requireNonNull(keyWrapper.getCurve());
-
-                String alg = null;
-                switch (keyWrapper.getCurve()) {
-                    case "P-256":
-                        alg = "ES256";
-                        break;
-                    case "P-384":
-                        alg = "ES384";
-                        break;
-                    case "P-521":
-                        alg = "ES512";
-                        break;
-                }
-
-                keyWrapper.setAlgorithm(alg);
-            }
-
-            return new ECDSASignatureVerifierContext(keyWrapper);
-        }
-
-        // KeyType.RSA
-        if (keyWrapper.getType().equals(KeyType.RSA)) {
-            return new AsymmetricSignatureVerifierContext(keyWrapper);
-        }
-
-        // KeyType is not supported
-        // This is unreachable as of now given that `JWKSUtils.getKeyWrapper` will fail
-        // on JWKs with key type not equal to EC or RSA.
-        throw new VerificationException("cnf/jwk alg is unsupported or deemed not secure");
-    }
-
-    /**
-     * Validate Issuer-Signed JWT time claims.
-     *
-     * <p>
-     * Check that the SD-JWT is valid using claims such as nbf, iat, and exp in the processed payload.
-     * If a required validity-controlling claim is missing, the SD-JWT MUST be rejected.
-     * </p>
-     *
-     * @throws VerificationException if verification failed
-     */
-    private void validateIssuerSignedJwtTimeClaims(
-            JsonNode payload,
-            IssuerSignedJwtVerificationOpts issuerSignedJwtVerificationOpts
-    ) throws VerificationException {
-        long now = Instant.now().getEpochSecond();
-
-        try {
-            if (issuerSignedJwtVerificationOpts.mustValidateIssuedAtClaim()
-                    && now < SdJwtUtils.readTimeClaim(payload, "iat")) {
-                throw new VerificationException("JWT issued in the future");
-            }
-        } catch (VerificationException e) {
-            throw new VerificationException("Issuer-Signed JWT: Invalid `iat` claim", e);
-        }
-
-        try {
-            if (issuerSignedJwtVerificationOpts.mustValidateExpirationClaim()
-                    && now >= SdJwtUtils.readTimeClaim(payload, "exp")) {
-                throw new VerificationException("JWT has expired");
-            }
-        } catch (VerificationException e) {
-            throw new VerificationException("Issuer-Signed JWT: Invalid `exp` claim", e);
-        }
-
-        try {
-            if (issuerSignedJwtVerificationOpts.mustValidateNotBeforeClaim()
-                    && now < SdJwtUtils.readTimeClaim(payload, "nbf")) {
-                throw new VerificationException("JWT is not yet valid");
-            }
-        } catch (VerificationException e) {
-            throw new VerificationException("Issuer-Signed JWT: Invalid `nbf` claim", e);
-        }
-    }
-
-    /**
-     * Validate key binding JWT time claims.
-     *
-     * @throws VerificationException if verification failed
-     */
-    private void validateKeyBindingJwtTimeClaims(
-            KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts
-    ) throws VerificationException {
-        // Check that the creation time of the Key Binding JWT, as determined by the iat claim,
-        // is within an acceptable window
-
-        try {
-            keyBindingJwt.verifyIssuedAtClaim();
-        } catch (VerificationException e) {
-            throw new VerificationException("Key binding JWT: Invalid `iat` claim", e);
-        }
-
-        try {
-            keyBindingJwt.verifyAge(keyBindingJwtVerificationOpts.getAllowedMaxAge());
-        } catch (VerificationException e) {
-            throw new VerificationException("Key binding JWT is too old");
-        }
-
-        // Check other time claims
-
-        try {
-            if (keyBindingJwtVerificationOpts.mustValidateExpirationClaim()) {
-                keyBindingJwt.verifyExpClaim();
-            }
-        } catch (VerificationException e) {
-            throw new VerificationException("Key binding JWT: Invalid `exp` claim", e);
-        }
-
-        try {
-            if (keyBindingJwtVerificationOpts.mustValidateNotBeforeClaim()) {
-                keyBindingJwt.verifyNotBeforeClaim();
-            }
-        } catch (VerificationException e) {
-            throw new VerificationException("Key binding JWT: Invalid `nbf` claim", e);
+            throw new VerificationException("Could not process cnf/jwk", e);
         }
     }
 
@@ -394,7 +304,7 @@ public class SdJwtVerificationContext {
         Set<String> visitedSalts = new HashSet<>();
         Set<String> visitedDigests = new HashSet<>();
         Set<String> visitedDisclosureStrings = new HashSet<>();
-        var disclosedPayload = validateViaRecursiveDisclosing(
+        JsonNode disclosedPayload = validateViaRecursiveDisclosing(
                 SdJwtUtils.deepClone(issuerSignedJwt.getPayload()),
                 visitedSalts, visitedDigests, visitedDisclosureStrings);
 
@@ -427,11 +337,11 @@ public class SdJwtVerificationContext {
 
         // Find all objects having an _sd key that refers to an array of strings.
         if (currentNode.isObject()) {
-            var currentObjectNode = ((ObjectNode) currentNode);
+            ObjectNode currentObjectNode = ((ObjectNode) currentNode);
 
-            var sdArray = currentObjectNode.get(IssuerSignedJWT.CLAIM_NAME_SELECTIVE_DISCLOSURE);
+            JsonNode sdArray = currentObjectNode.get(CLAIM_NAME_SD);
             if (sdArray != null && sdArray.isArray()) {
-                for (var el : sdArray) {
+                for (JsonNode el : sdArray) {
                     if (!el.isTextual()) {
                         throw new VerificationException(
                                 "Unexpected non-string element inside _sd array: " + el
@@ -441,63 +351,70 @@ public class SdJwtVerificationContext {
                     // Compare the value with the digests calculated previously and find the matching Disclosure.
                     // If no such Disclosure can be found, the digest MUST be ignored.
 
-                    var digest = el.asText();
+                    String digest = el.asText();
                     markDigestAsVisited(digest, visitedDigests);
-                    var disclosure = disclosures.get(digest);
+                    String disclosure = disclosures.get(digest);
 
                     if (disclosure != null) {
                         // Mark disclosure as visited
                         visitedDisclosureStrings.add(disclosure);
 
                         // Validate disclosure format
-                        var decodedDisclosure = validateSdArrayDigestDisclosureFormat(disclosure);
+                        DisclosureFields decodedDisclosure = validateSdArrayDigestDisclosureFormat(disclosure);
 
                         // Mark salt as visited
                         markSaltAsVisited(decodedDisclosure.getSaltValue(), visitedSalts);
 
+                        // If the claim name already exists at the level of the _sd key,
+                        // the SD-JWT MUST be rejected (selective-disclosure-jwt, verification
+                        // of the Issuer-signed JWT). Otherwise a Disclosure could silently
+                        // shadow a claim that is present in plaintext or added by another Disclosure.
+                        String claimName = decodedDisclosure.getClaimName();
+                        if (currentObjectNode.has(claimName)) {
+                            throw new VerificationException(
+                                    "Disclosure claim name already present in the payload: " + claimName);
+                        }
+
                         // Insert, at the level of the _sd key, a new claim using the claim name
                         // and claim value from the Disclosure
-                        currentObjectNode.set(
-                                decodedDisclosure.getClaimName(),
-                                decodedDisclosure.getClaimValue()
-                        );
+                        currentObjectNode.set(claimName, decodedDisclosure.getClaimValue());
                     }
                 }
             }
 
             // Remove all _sd keys and their contents from the Issuer-signed JWT payload.
             // If this results in an object with no properties, it should be represented as an empty object {}
-            currentObjectNode.remove(IssuerSignedJWT.CLAIM_NAME_SELECTIVE_DISCLOSURE);
+            currentObjectNode.remove(CLAIM_NAME_SD);
 
             // Remove the claim _sd_alg from the SD-JWT payload.
-            currentObjectNode.remove(IssuerSignedJWT.CLAIM_NAME_SD_HASH_ALGORITHM);
+            currentObjectNode.remove(CLAIM_NAME_SD_HASH_ALGORITHM);
         }
 
         // Find all array elements that are objects with one key, that key being ... and referring to a string
         if (currentNode.isArray()) {
-            var currentArrayNode = ((ArrayNode) currentNode);
-            var indexesToRemove = new ArrayList<Integer>();
+            ArrayNode currentArrayNode = ((ArrayNode) currentNode);
+            ArrayList<Integer> indexesToRemove = new ArrayList<>();
 
             for (int i = 0; i < currentArrayNode.size(); ++i) {
-                var itemNode = currentArrayNode.get(i);
+                JsonNode itemNode = currentArrayNode.get(i);
                 if (itemNode.isObject() && itemNode.size() == 1) {
                     // Check single "..." field
-                    var field = itemNode.fields().next();
-                    if (field.getKey().equals(UndisclosedArrayElement.SD_CLAIM_NAME)
+                    Map.Entry<String, JsonNode> field = itemNode.fields().next();
+                    if (field.getKey().equals(CLAIM_NAME_SD_UNDISCLOSED_ARRAY)
                             && field.getValue().isTextual()) {
                         // Compare the value with the digests calculated previously and find the matching Disclosure.
                         // If no such Disclosure can be found, the digest MUST be ignored.
 
-                        var digest = field.getValue().asText();
+                        String digest = field.getValue().asText();
                         markDigestAsVisited(digest, visitedDigests);
-                        var disclosure = disclosures.get(digest);
+                        String disclosure = disclosures.get(digest);
 
                         if (disclosure != null) {
                             // Mark disclosure as visited
                             visitedDisclosureStrings.add(disclosure);
 
                             // Validate disclosure format
-                            var decodedDisclosure = validateArrayElementDigestDisclosureFormat(disclosure);
+                            DisclosureFields decodedDisclosure = validateArrayElementDigestDisclosureFormat(disclosure);
 
                             // Mark salt as visited
                             markSaltAsVisited(decodedDisclosure.getSaltValue(), visitedSalts);
@@ -513,8 +430,10 @@ public class SdJwtVerificationContext {
                 }
             }
 
-            // Remove all array elements for which the digest was not found in the previous step.
-            indexesToRemove.forEach(currentArrayNode::remove);
+            // Remove in reverse order so that each removal does not shift indices of earlier elements.
+            for (int i = indexesToRemove.size() - 1; i >= 0; i--) {
+                currentArrayNode.remove((int) indexesToRemove.get(i));
+            }
         }
 
         for (JsonNode childNode : currentNode) {
@@ -584,9 +503,9 @@ public class SdJwtVerificationContext {
 
         // If the claim name is _sd or ..., the SD-JWT MUST be rejected.
 
-        var denylist = List.of(
-                IssuerSignedJWT.CLAIM_NAME_SELECTIVE_DISCLOSURE,
-                UndisclosedArrayElement.SD_CLAIM_NAME
+        List<String> denylist = Arrays.asList(
+                CLAIM_NAME_SD,
+                CLAIM_NAME_SD_UNDISCLOSED_ARRAY
         );
 
         String claimName = arrayNode.get(1).asText();
@@ -647,32 +566,6 @@ public class SdJwtVerificationContext {
     }
 
     /**
-     * Run checks for replay protection.
-     *
-     * <p>
-     * Determine that the Key Binding JWT is bound to the current transaction and was created for this
-     * Verifier (replay protection) by validating nonce and aud claims.
-     * </p>
-     *
-     * @throws VerificationException if verification failed
-     */
-    private void preventKeyBindingJwtReplay(
-            KeyBindingJwtVerificationOpts keyBindingJwtVerificationOpts
-    ) throws VerificationException {
-        JsonNode nonce = keyBindingJwt.getPayload().get("nonce");
-        if (nonce == null || !nonce.isTextual()
-                || !nonce.asText().equals(keyBindingJwtVerificationOpts.getNonce())) {
-            throw new VerificationException("Key binding JWT: Unexpected `nonce` value");
-        }
-
-        JsonNode aud = keyBindingJwt.getPayload().get("aud");
-        if (aud == null || !aud.isTextual()
-                || !aud.asText().equals(keyBindingJwtVerificationOpts.getAud())) {
-            throw new VerificationException("Key binding JWT: Unexpected `aud` value");
-        }
-    }
-
-    /**
      * Validate integrity of Key Binding JWT's sd_hash.
      *
      * <p>
@@ -685,12 +578,12 @@ public class SdJwtVerificationContext {
     private void validateKeyBindingJwtSdHashIntegrity() throws VerificationException {
         Objects.requireNonNull(sdJwtVpString);
 
-        JsonNode sdHash = keyBindingJwt.getPayload().get("sd_hash");
+        JsonNode sdHash = keyBindingJwt.getPayload().get(SD_HASH);
         if (sdHash == null || !sdHash.isTextual()) {
             throw new VerificationException("Key binding JWT: Claim `sd_hash` missing or not a string");
         }
 
-        int lastDelimiterIndex = sdJwtVpString.lastIndexOf(SdJwt.DELIMITER);
+        int lastDelimiterIndex = sdJwtVpString.lastIndexOf(SDJWT_DELIMITER);
         String toHash = sdJwtVpString.substring(0, lastDelimiterIndex + 1);
 
         String digest = SdJwtUtils.hashAndBase64EncodeNoPad(
